product details added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,11 @@
 html {
     scroll-behavior: smooth;
  }
+
+ .itemsDetailCard{
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    width: 70%;
+    border-radius: 8px;
+    margin:  50px auto;
+    padding: 50px;
+ }
