--- a/src/app/components/cartSection/cartSection.module.scss
+++ b/src/app/components/cartSection/cartSection.module.scss
@@ -1,4 +1,4 @@
-.cartSection{
+.CartSection{
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     width: 60%;
     min-height: 300px;
